Fix bug where date inputs would wrap in Safari iOS

--- a/source/css/forms.css
+++ b/source/css/forms.css
@@ -52,6 +52,7 @@ textarea {
   padding: calc(var(--component-spacing) * .5);
   margin: 0;
   transition: .1s border-color, .1s background-color, .1s color;
+  white-space: nowrap;
   -moz-appearance: none;
   -webkit-appearance: none;
 }
@@ -90,6 +91,7 @@ textarea {
   height: auto;
   resize: vertical;
   line-height: var(--line-height);
+  white-space: normal;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
